kubernetes/apps/immich/base/immich.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: immich
  name: immich
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: immich
spec:
  type: ClusterIP
  ports:
    - name: immich
      port: 2283
      protocol: TCP
  selector:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: immich
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: immich
  name: immich
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: immich
spec:
  serviceName: immich
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: immich
      kalexlab.xyz/component: immich
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: immich
        kalexlab.xyz/component: immich
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: immich
          image: "ghcr.io/immich-app/immich-server:v2.7.5"
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 2283
              protocol: TCP

          resources:
            requests:
              memory: 1Gi
              cpu: 10m
            limits:
              memory: 2.5Gi
              cpu: 2000m

          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: immich-uploads-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

  volumeClaimTemplates:
    - metadata:
        name: immich-uploads-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Gi
