kubernetes/apps/immich/base/machine-learning.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: immich
  name: machine-learning
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: machine-learning
spec:
  type: ClusterIP
  ports:
    - name: machine-learning
      port: 3003
      protocol: TCP
  selector:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: machine-learning
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: immich
  name: machine-learning
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: machine-learning
spec:
  serviceName: machine-learning
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: immich
      kalexlab.xyz/component: machine-learning
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: immich
        kalexlab.xyz/component: machine-learning
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: immich
          image: "ghcr.io/immich-app/immich-machine-learning:v2.6.3"
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 3003
              protocol: TCP

          resources:
            requests:
              memory: 200Mi
              cpu: 10m
            limits:
              memory: 3Gi
              cpu: 2000m

          readinessProbe:
            httpGet:
              path: /
              port: 3003
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3003
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - mountPath: /cache
              name: machine-learning-cache-pvc
            - mountPath: /tmp
              name: tmp

      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

  volumeClaimTemplates:
    - metadata:
        name: machine-learning-cache-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
