kubernetes/apps/immich/base/valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: immich
  name: cache
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: cache
spec:
  type: ClusterIP
  ports:
    - name: valkey
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: cache
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: immich
  name: cache
  labels:
    kalexlab.xyz/app: immich
    kalexlab.xyz/component: cache
spec:
  replicas: 1
  serviceName: cache
  selector:
    matchLabels:
      kalexlab.xyz/app: immich
      kalexlab.xyz/component: cache
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: immich
        kalexlab.xyz/component: cache
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: cache
          image: "docker.io/valkey/valkey:9.1.0-alpine"
          imagePullPolicy: Always

          ports:
            - name: valkey
              containerPort: 6379
              protocol: TCP

          livenessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping"]
            periodSeconds: 10
            failureThreshold: 3

          resources:
            requests:
              memory: 10Mi
              cpu: 1m
            limits:
              memory: 200Mi
              cpu: 100m

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /data
              name: data

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: data
          emptyDir:
            sizeLimit: 1Gi
