kubernetes/apps/immich/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: immich
  name: immich-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`immich.kalexlab.xyz`)
      services:
        - name: immich
          port: 2283
  tls:
    secretName: immich-ingress-certificate-secret
